--- a/Client/Views/Home/Index.cshtml
+++ b/Client/Views/Home/Index.cshtml
@@ -11,9 +11,14 @@
                 </div>
                 <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
                     <form>
+                        @* TODO: Implement Search*@
                         <div class="form-row">
-                            <div class="col-12 col-md-9 mb-2 mb-md-0"><input class="form-control form-control-lg" type="email" placeholder="Enter Ingredient"></div>
-                            <div class="col-12 col-md-3"><button class="btn btn-primary btn-block btn-lg" type="submit">Search</button></div>
+                            <div class="col-12 col-md-9 mb-2 mb-md-0">
+                                <input class="form-control form-control-lg" type="email" placeholder="Enter Ingredient">
+                            </div>
+                            <div class="col-12 col-md-3">
+                                <button class="btn btn-primary btn-block btn-lg" type="submit">Search</button>
+                            </div>
                         </div>
                     </form>
                 </div>
