Added Views For Footer Links

--- a/Client/Views/Home/Index.cshtml
+++ b/Client/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
 
 <header class="text-center text-white masthead bg-secondary" style="background:no-repeat center center;background-size:cover;">
