--- a/Client/Views/Shared/_Layout.cshtml
+++ b/Client/Views/Shared/_Layout.cshtml
@@ -35,11 +35,11 @@
             <div class="row">
                 <div class="col-lg-6 text-center text-lg-left my-auto h-100">
                     <ul class="list-inline mb-2">
-                        <li class="list-inline-item"><a href="#">About</a></li>
+                        <li class="list-inline-item"><a asp-action="About">About</a></li>
                         <li class="list-inline-item"><span>⋅</span></li>
-                        <li class="list-inline-item"><a href="#">Contact</a></li>
+                        <li class="list-inline-item"><a asp-action="Contact">Contact</a></li>
                         <li class="list-inline-item"><span>⋅</span></li>
-                        <li class="list-inline-item"><a href="#">Terms of &nbsp;Use</a></li>
+                        <li class="list-inline-item"><a asp-action="Terms">Terms of &nbsp;Use</a></li>
                         <li class="list-inline-item"><span>⋅</span></li>
                         <li class="list-inline-item"><a asp-action="Privacy">Privacy Policy</a></li>
                     </ul>
