--- a/Client/Views/Blog/Index.cshtml
+++ b/Client/Views/Blog/Index.cshtml
@@ -1,47 +1,93 @@
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
 @{
-    ViewBag.Title = "Blog";
-    Layout = "_Layout";
+	ViewBag.Title = "Blog";
+	Layout = "_Layout";
 }
-<header class="masthead bg-secondary text-center">
-    <div class="container text-white">
-        <div class="row">
-            <div class="col-md-10 col-lg-8 mx-auto">
-                <div class="site-heading">
-                    <h1>Clean Blog</h1><span class="subheading">A Blog Theme by Start Bootstrap</span>
-                </div>
-            </div>
-        </div>
-    </div>
-</header>
-<br />
+<br/>
 <div class="row">
-    <div class="col-md-10 col-lg-8">
-        <div class="post-preview"><a asp-action="Post">
-                <h2 class="post-title">Man must explore, and this is exploration at its greatest</h2>
-                <h3 class="post-subtitle">Problems look mighty small from 150 miles up</h3>
-            </a>
-            <p class="post-meta">Posted by&nbsp;<a href="#">Start Bootstrap on September 24, 2018</a></p>
-        </div>
-        <hr>
-        <div class="post-preview"><a href="#">
-                <h2 class="post-title">I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.</h2>
-            </a>
-            <p class="post-meta">Posted by&nbsp;<a href="#">Start Bootstrap on September 18, 2018</a></p>
-        </div>
-        <hr>
-        <div class="post-preview"><a href="#">
-                <h2 class="post-title"> Science has not yet mastered prophecy</h2>
-                <h3 class="post-subtitle">We predict too much for the next year and yet far too little for the next ten.</h3>
-            </a>
-            <p class="post-meta">Posted by&nbsp;<a href="#">Start Bootstrap on August 24, 2018</a></p>
-        </div>
-        <hr>
-        <div class="post-preview"><a href="#">
-                <h2 class="post-title">Failure is not an option</h2>
-                <h3 class="post-subtitle">Many say exploration is part of our destiny, but it’s actually our duty to future generations.</h3>
-            </a>
-            <p class="post-meta">Posted by&nbsp;<a href="#">Start Bootstrap on July 8, 2018</a></p>
-        </div>
-        <hr>
-    </div>
+	<div class="col-md-6">
+		@if (SignInManager.IsSignedIn(User))
+		{
+			<a class="btn btn-success btn-block btn-lg" asp-action="Create" >Create Post</a>
+		}
+	</div>
+	<div class="col-md-6">
+		<form>
+			@* TODO: Implement Search*@
+			<div class="form-row">
+				<div class="col-12 col-md-9 mb-2 mb-md-0">
+					<input class="form-control form-control-lg" type="text" placeholder="Enter Topic To Search">
+				</div>
+				<div class="col-12 col-md-3">
+					<button class="btn btn-primary btn-block btn-lg" type="submit">Search</button>
+				</div>
+			</div>
+		</form>
+	</div>
+</div>
+<br/>
+<div class="row">
+
+</div>
+<br/>
+<div class="row">
+	<div class="col-md-10 col-lg-8">
+		<div class="card">
+			<div class="card-header" style="background: cornflowerblue">
+				<h4>
+					<a class="text-dark" asp-action="Post">Man must explore, and this is exploration at its greatest</a>
+				</h4>
+			</div>
+			<div class="card-body">
+				<blockquote class="blockquote mb-0">
+					<p>Problems look mighty small from 150 miles up.</p>
+					<footer class="blockquote-footer">Margeret E. <cite title="Source Title"> August 24, 2018</cite></footer>
+				</blockquote>
+			</div>
+		</div>
+		<hr/>
+		<div class="card">
+			<div class="card-header" style="background: cornflowerblue">
+				<h4>
+					<a class="text-dark" asp-action="Post">I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.</a>
+				</h4>
+			</div>
+			<div class="card-body">
+				<blockquote class="blockquote mb-0">
+					<p></p>
+					<footer class="blockquote-footer">Margeret E. <cite title="Source Title"> September 18, 2018</cite></footer>
+				</blockquote>
+			</div>
+		</div>
+		<hr>
+		<div class="card">
+			<div class="card-header" style="background: cornflowerblue">
+				<h4>
+					<a class="text-dark" asp-action="Post">Science has not yet mastered prophecy</a>
+				</h4>
+			</div>
+			<div class="card-body">
+				<blockquote class="blockquote mb-0">
+					<p>We predict too much for the next year and yet far too little for the next ten.</p>
+					<footer class="blockquote-footer">Margeret E. <cite title="Source Title"> August 24, 2018</cite></footer>
+				</blockquote>
+			</div>
+		</div>
+		<hr>
+		<div class="card">
+			<div class="card-header" style="background: cornflowerblue">
+				<h4>
+					<a class="text-dark" asp-action="Post">Failure is not an option</a>
+				</h4>
+			</div>
+			<div class="card-body">
+				<blockquote class="blockquote mb-0">
+					<p>Many say exploration is part of our destiny, but it’s actually our duty to future generations</p>
+					<footer class="blockquote-footer">Margeret E. <cite title="Source Title"> July 8, 2018</cite></footer>
+				</blockquote>
+			</div>
+		</div>
+		<hr>
+	</div>
 </div>
