--- a/Client/Views/Blog/Post.cshtml
+++ b/Client/Views/Blog/Post.cshtml
@@ -1,19 +1,16 @@
+
 @{
 	ViewBag.Title = "Blog";
 	Layout = "_Layout";
 }
+<br />
 
-<header class="masthead bg-secondary">
+<div class="post-preview"><a href="#">
+        <h2 class="post-title">I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.</h2>
+    </a>
+    <p class="post-meta">Posted by&nbsp;<a href="#">Start Bootstrap on September 18, 2018</a></p>
+</div>
 
-	<div class="row">
-		<div class="col-md-10 col-lg-8 mx-auto">
-			<div class="post-heading">
-				<h1>Man must explore, and this is exploration at its greatest</h1>
-				<h2 class="subheading">Problems look mighty small from 150 miles up</h2><span class="meta">Posted by&nbsp;<a href="#">Start Bootstrap</a>&nbsp;on August 24, 2018</span>
-			</div>
-		</div>
-	</div>
-</header>
 <article>
 	<div class="container">
 		<div class="row">
