--- a/Client/Views/Blog/Index.cshtml
+++ b/Client/Views/Blog/Index.cshtml
@@ -1,3 +1,4 @@
+@model PaginatedList<Post>
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
 @{
@@ -6,25 +7,25 @@
 }
 <br/>
 <div class="row">
-	<div class="col-md-6">
+	<div class="col-md-3">
 		@if (SignInManager.IsSignedIn(User))
 		{
 			<a class="btn btn-success btn-block btn-lg" asp-action="Create" >Create Post</a>
 		}
 	</div>
-	<div class="col-md-6">
-		<form>
-			@* TODO: Implement Search*@
-			<div class="form-row">
-				<div class="col-12 col-md-9 mb-2 mb-md-0">
-					<input class="form-control form-control-lg" type="text" placeholder="Enter Topic To Search">
-				</div>
-				<div class="col-12 col-md-3">
-					<button class="btn btn-primary btn-block btn-lg" type="submit">Search</button>
-				</div>
-			</div>
-		</form>
-	</div>
+	@* <div class="col-md-9"> *@
+	@* 	<form> *@
+	@* 		$1$ TODO: Implement Search#1# *@
+	@* 		<div class="form-row"> *@
+	@* 			<div class="col-12 col-md-9 mb-2 mb-md-0"> *@
+	@* 				<input class="form-control form-control-lg" type="text" placeholder="Search"> *@
+	@* 			</div> *@
+	@* 			<div class="col-12 col-md-3"> *@
+	@* 				<button class="btn btn-primary btn-block btn-lg" type="submit">Search</button> *@
+	@* 			</div> *@
+	@* 		</div> *@
+	@* 	</form> *@
+	@* </div> *@
 </div>
 <br/>
 <div class="row">
@@ -33,61 +34,28 @@
 <br/>
 <div class="row">
 	<div class="col-md-10 col-lg-8">
-		<div class="card">
-			<div class="card-header" style="background: cornflowerblue">
-				<h4>
-					<a class="text-dark" asp-action="Post">Man must explore, and this is exploration at its greatest</a>
-				</h4>
+		@foreach (var post in Model)
+		{
+			<div class="card">
+				<div class="card-header" style="background: cornflowerblue">
+					<h4>
+						<a class="text-dark" asp-action="Post" asp-route-id="@post.Id">@post.Title</a>
+					</h4>
+				</div>
+				<div class="card-body">
+					<blockquote class="blockquote mb-0">
+						<p>@post.TagLine</p>
+						<footer class="blockquote-footer">@post.Author <cite title="Source Title"> @post.CreatedAt</cite></footer>
+					</blockquote>
+				</div>
 			</div>
-			<div class="card-body">
-				<blockquote class="blockquote mb-0">
-					<p>Problems look mighty small from 150 miles up.</p>
-					<footer class="blockquote-footer">Margeret E. <cite title="Source Title"> August 24, 2018</cite></footer>
-				</blockquote>
-			</div>
-		</div>
-		<hr/>
-		<div class="card">
-			<div class="card-header" style="background: cornflowerblue">
-				<h4>
-					<a class="text-dark" asp-action="Post">I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.</a>
-				</h4>
-			</div>
-			<div class="card-body">
-				<blockquote class="blockquote mb-0">
-					<p></p>
-					<footer class="blockquote-footer">Margeret E. <cite title="Source Title"> September 18, 2018</cite></footer>
-				</blockquote>
-			</div>
-		</div>
-		<hr>
-		<div class="card">
-			<div class="card-header" style="background: cornflowerblue">
-				<h4>
-					<a class="text-dark" asp-action="Post">Science has not yet mastered prophecy</a>
-				</h4>
-			</div>
-			<div class="card-body">
-				<blockquote class="blockquote mb-0">
-					<p>We predict too much for the next year and yet far too little for the next ten.</p>
-					<footer class="blockquote-footer">Margeret E. <cite title="Source Title"> August 24, 2018</cite></footer>
-				</blockquote>
-			</div>
-		</div>
-		<hr>
-		<div class="card">
-			<div class="card-header" style="background: cornflowerblue">
-				<h4>
-					<a class="text-dark" asp-action="Post">Failure is not an option</a>
-				</h4>
-			</div>
-			<div class="card-body">
-				<blockquote class="blockquote mb-0">
-					<p>Many say exploration is part of our destiny, but it’s actually our duty to future generations</p>
-					<footer class="blockquote-footer">Margeret E. <cite title="Source Title"> July 8, 2018</cite></footer>
-				</blockquote>
-			</div>
-		</div>
-		<hr>
+			<hr/>
+		}
 	</div>
 </div>
+@{
+        var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
+        var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+	}
+	<a class="btn btn-default @prevDisabled" asp-action="Index" asp-route-pageNumber="@(Model.PageIndex - 1)">Previous</a>
+	<a class="btn btn-default @nextDisabled" asp-action="Index" asp-route-pageNumber="@(Model.PageIndex + 1)">Next</a>
