--- a/Client/Views/Shared/_Layout.cshtml
+++ b/Client/Views/Shared/_Layout.cshtml
@@ -18,20 +18,20 @@
             <button data-toggle="collapse" class="navbar-toggler text-dark" data-target="#navcol-1" style="text-align: center;"></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <a asp-controller="Blog" asp-action="Index" style="color: var(--dark);font-size: 22px;margin: 5px;padding: 5px;">Blog</a>
-                <a asp-controller="" asp-action="Index" style="color: var(--dark);font-size: 22px;margin: 5px;padding: 5px;">Guides</a>
-                <a asp-controller="" asp-action="Index" style="color: var(--dark);font-size: 22px;margin: 5px;padding: 5px;">Vegan Places Near You</a>
+                <a asp-controller="Guides" asp-action="Index" style="color: var(--dark);font-size: 22px;margin: 5px;padding: 5px;">Guides</a>
+                <a asp-controller="Places" asp-action="Index" style="color: var(--dark);font-size: 22px;margin: 5px;padding: 5px;">Vegan Places Near You</a>
             </div>
             <partial name="_LoginPartial"/>
         </div>
     </nav>
 </header>
-<div class="container">
+<div class="container" style="min-height: 80vh;display: flex;flex-direction: column">
     <main role="main" class="pb-3">
         @RenderBody()
     </main>
 </div>
 
-<footer class="bg-light card-footer">
+<footer class="bg-light card-footer" style="margin-top: auto">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 text-center text-lg-left my-auto h-100">
