Added Guides Controller

--- a/Client/Views/Shared/_Layout.cshtml
+++ b/Client/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <a asp-controller="Blog" asp-action="Index" style="color: var(--dark);font-size: 22px;margin: 5px;padding: 5px;">Blog</a>
                 <a asp-controller="Guides" asp-action="Index" style="color: var(--dark);font-size: 22px;margin: 5px;padding: 5px;">Guides</a>
-                <a asp-controller="Places" asp-action="Index" style="color: var(--dark);font-size: 22px;margin: 5px;padding: 5px;">Vegan Places Near You</a>
+                <a asp-controller="Places" asp-action="Index" style="color: var(--dark);font-size: 22px;margin: 5px;padding: 5px;">Spots for Vegans</a>
             </div>
             <partial name="_LoginPartial"/>
         </div>
