--- a/Client/Views/Home/Index.cshtml
+++ b/Client/Views/Home/Index.cshtml
@@ -1,22 +1,21 @@
 ﻿@{
 	ViewData["Title"] = "Home";
+	var ingredient = "";
 }
-
 <header class="text-center text-white masthead bg-secondary" style="background:no-repeat center center;background-size:cover;">
-	<div class="overlay"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-xl-9 mx-auto">
-				<h1 class="mb-5">Search for an ingredient to know its whether vegan or not and much more!</h1>
+				<h1 class="mb-5">Doubt whether the your ingredients in the recipe is vegan or not?<br>Check it here!</h1>
 			</div>
 			<div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
 				@* TODO: Implement Search*@
 					<div class="form-row">
 						<div class="col-12 col-md-9 mb-2 mb-md-0">
-							<input class="form-control form-control-lg" type="text" id="ingInput" placeholder="Enter Ingredient">
+							<input asp-for="@ingredient" class="form-control form-control-lg" type="text" id="ingInput" placeholder="Enter Ingredient">
 						</div>
 						<div class="col-12 col-md-3">
-							<button class="btn btn-primary btn-block btn-lg" id="ingSubmit" type="submit">Search</button>
+							<a asp-action="Search" asp-route-ingredient="@ingredient" class="btn btn-primary btn-block btn-lg" id="ingSubmit" type="submit">Search</a>
 						</div>
 					</div>
 			</div>
@@ -25,25 +24,25 @@
 </header>
 <section class="text-center bg-light testimonials">
 	<div class="container">
-		<h2 class="mb-5" style="color: var(--blue);">People who changed their lifestyle to vegan</h2>
+		<h2 class="mb-5" style="">Vegans round the globe say :</h2>
 		<div class="row">
 			<div class="col-lg-4">
 				<div class="mx-auto testimonial-item mb-5 mb-lg-0">
-					<img class="rounded-circle img-fluid mb-3" src="~/img/testimonials-1.jpg" asp-append-version="true">
+					<img class="rounded-circle img-fluid mb-3" src="~/img/testimonials-1.jpg" asp-append-version="true" alt="Image of The Person">
 					<h5>Margaret E.</h5>
 					<p class="font-weight-light mb-0">"I have never felt this much positive energy!"</p>
 				</div>
 			</div>
 			<div class="col-lg-4">
 				<div class="mx-auto testimonial-item mb-5 mb-lg-0">
-					<img class="rounded-circle img-fluid mb-3" src="~/img/testimonials-2.jpg" asp-append-version="true">
+					<img class="rounded-circle img-fluid mb-3" src="~/img/testimonials-2.jpg" asp-append-version="true" alt="Image of The Person">
 					<h5>Fred S.</h5>
 					<p class="font-weight-light mb-0">"Vegan lifestyle is amazing. I've been vegan since my college."</p>
 				</div>
 			</div>
 			<div class="col-lg-4">
 				<div class="mx-auto testimonial-item mb-5 mb-lg-0">
-					<img class="rounded-circle img-fluid mb-3" src="~/img/testimonials-3.jpg" asp-append-version="true">
+					<img class="rounded-circle img-fluid mb-3" src="~/img/testimonials-3.jpg" asp-append-version="true" alt="Image of The Person">
 					<h5>Sarah W.</h5>
 					<p class="font-weight-light mb-0">"Being vegan has made me care more for nature."</p>
 				</div>
