--- a/Client/Views/Home/Index.cshtml
+++ b/Client/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@{
+﻿@model Ingredient
+@{
 	ViewData["Title"] = "Home";
-	var ingredient = "";
 }
 <header class="text-center text-white masthead bg-secondary" style="background:no-repeat center center;background-size:cover;">
 	<div class="container">
@@ -9,15 +9,17 @@
 				<h1 class="mb-5">Doubt whether the your ingredients in the recipe is vegan or not?<br>Check it here!</h1>
 			</div>
 			<div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+				<form asp-action="Search" method="post">
 				@* TODO: Implement Search*@
 					<div class="form-row">
 						<div class="col-12 col-md-9 mb-2 mb-md-0">
-							<input asp-for="@ingredient" class="form-control form-control-lg" type="text" id="ingInput" placeholder="Enter Ingredient">
+							<input asp-for="@Model.Name" class="form-control form-control-lg" type="text" id="ingInput" placeholder="Enter Ingredient">
 						</div>
 						<div class="col-12 col-md-3">
-							<a asp-action="Search" asp-route-ingredient="@ingredient" class="btn btn-primary btn-block btn-lg" id="ingSubmit" type="submit">Search</a>
+							<button class="btn btn-primary btn-block btn-lg" id="ingSubmit" type="submit">Search</button>
 						</div>
 					</div>
+				</form>
 			</div>
 		</div>
 	</div>
