--- a/Client/Views/Home/Index.cshtml
+++ b/Client/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Ingredient
+﻿@model Core.ViewModels.HomeVm
 @{
 	ViewData["Title"] = "Home";
 }
@@ -10,10 +10,10 @@
 			</div>
 			<div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
 				<form asp-action="Search" method="post">
-				@* TODO: Implement Search*@
+					@* TODO: Implement Search*@
 					<div class="form-row">
 						<div class="col-12 col-md-9 mb-2 mb-md-0">
-							<input asp-for="@Model.Name" class="form-control form-control-lg" type="text" id="ingInput" placeholder="Enter Ingredient">
+							<input asp-for="@Model.Ingredient.Name" class="form-control form-control-lg" type="text" id="ingInput" placeholder="Enter Ingredient">
 						</div>
 						<div class="col-12 col-md-3">
 							<button class="btn btn-primary btn-block btn-lg" id="ingSubmit" type="submit">Search</button>
@@ -24,31 +24,62 @@
 		</div>
 	</div>
 </header>
+<section class="text-center bg-light ">
+	<div class="container">
+		<h2 class="mb-5" style="color: #6610f2">
+			What is being a Vegan?
+		</h2>
+		<div class="row">
+			<div class="col-lg-2"></div>
+			<div class="col-lg-8">
+				@Html.Raw(Model.Home.BeingVegan)
+			</div>
+			<div class="col-lg-2"></div>
+		</div>
+	</div>
+</section>
+<section class="text-center bg-light ">
+	<div class="container">
+		<h2 class="mb-5" style="color: #6610f2">
+			Why should we turn into a Vegan?
+		</h2>
+		<div class="row">
+			<div class="col-lg-2"></div>
+			<div class="col-lg-8">
+				@Html.Raw(Model.Home.WhyVegan)
+			</div>
+			<div class="col-lg-2"></div>
+		</div>
+	</div>
+</section>
+<section class="text-center bg-light ">
+	<div class="container">
+		<h2 class="mb-5" style="color: #6610f2">
+			What are the arguments against veganism and how are they wrong?
+		</h2>
+		<div class="row">
+			<div class="col-lg-2"></div>
+			<div class="col-lg-8">
+				@Html.Raw(Model.Home.Arguments)
+			</div>
+			<div class="col-lg-2"></div>
+		</div>
+	</div>
+</section>
 <section class="text-center bg-light testimonials">
 	<div class="container">
-		<h2 class="mb-5" style="">Vegans round the globe say :</h2>
+		<h2 class="mb-5" style="color: #6610f2">Vegans round the globe say :</h2>
 		<div class="row">
-			<div class="col-lg-4">
-				<div class="mx-auto testimonial-item mb-5 mb-lg-0">
-					<img class="rounded-circle img-fluid mb-3" src="~/img/testimonials-1.jpg" asp-append-version="true" alt="Image of The Person">
-					<h5>Margaret E.</h5>
-					<p class="font-weight-light mb-0">"I have never felt this much positive energy!"</p>
+			@foreach (var item in Model.Testimonials)
+			{
+				<div class="col-lg-4">
+					<div class="mx-auto testimonial-item mb-5 mb-lg-0">
+						<img class="rounded-circle img-fluid mb-3" src="@item.ImgSrc" asp-append-version="true" alt="Image of The Person">
+						<h5>@item.Name</h5>
+						<p class="font-weight-light mb-0">"@item.Quote"</p>
+					</div>
 				</div>
-			</div>
-			<div class="col-lg-4">
-				<div class="mx-auto testimonial-item mb-5 mb-lg-0">
-					<img class="rounded-circle img-fluid mb-3" src="~/img/testimonials-2.jpg" asp-append-version="true" alt="Image of The Person">
-					<h5>Fred S.</h5>
-					<p class="font-weight-light mb-0">"Vegan lifestyle is amazing. I've been vegan since my college."</p>
-				</div>
-			</div>
-			<div class="col-lg-4">
-				<div class="mx-auto testimonial-item mb-5 mb-lg-0">
-					<img class="rounded-circle img-fluid mb-3" src="~/img/testimonials-3.jpg" asp-append-version="true" alt="Image of The Person">
-					<h5>Sarah W.</h5>
-					<p class="font-weight-light mb-0">"Being vegan has made me care more for nature."</p>
-				</div>
-			</div>
+			}
 		</div>
 	</div>
 </section>
