--- a/Client/Views/Guides/Index.cshtml
+++ b/Client/Views/Guides/Index.cshtml
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
 @{
-	ViewBag.Title = "Blog";
+	ViewBag.Title = "Guide";
 	Layout = "_Layout";
 }
 <br/>
