--- a/Client/Views/Home/Search.cshtml
+++ b/Client/Views/Home/Search.cshtml
@@ -6,5 +6,11 @@
 }
 
 <h2>Ingredient Search</h2>
+<hr>
 
 <h3> You searched for : @Model.Name</h3>
+
+<br>
+
+<h4>Sorry . Didn't Find the ingredient in our database!</h4>
+<p> We are continously adding ingredients to our database</p>
