--- a/Client/Views/Home/Index.cshtml
+++ b/Client/Views/Home/Index.cshtml
@@ -73,7 +73,7 @@
 			{
 				<div class="col-lg-4">
 					<div class="mx-auto testimonial-item mb-5 mb-lg-0">
-						<img class="rounded-circle img-fluid mb-3" src="@item.ImgSrc" asp-append-version="true" alt="Image of The Person">
+						<img class="rounded-circle img-fluid mb-3" src="@item.ImgSrc" asp-append-version="true" alt="Image of The Person" />
 						<h5>@item.Name</h5>
 						<p class="font-weight-light mb-0">"@item.Quote"</p>
 					</div>
