Added Ingredients Functionality

--- a/Client/Views/Home/Search.cshtml
+++ b/Client/Views/Home/Search.cshtml
@@ -11,6 +11,10 @@
 <h3> You searched for : @Model.Name</h3>
 
 <br>
-
-<h4>Sorry . Didn't Find the ingredient in our database!</h4>
-<p> We are continously adding ingredients to our database</p>
+@if (Model.IsVegan) {
+    <h4>The ingredient you searched for is Vegan.</h4>
+}
+else{
+    <h4>Sorry . Didn't Find the ingredient in our database!</h4>
+    <p> We are continously adding ingredients to our database</p>
+}
