Added Food Database LookUp

--- a/Client/Views/Home/Index.cshtml
+++ b/Client/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
 							<input asp-for="@Model.Ingredient.Name" class="form-control form-control-lg" type="text" id="ingInput" placeholder="Enter Ingredient">
 						</div>
 						<div class="col-12 col-md-3">
-							<button class="btn btn-primary btn-block btn-lg" id="ingSubmit" type="submit">Search</button>
+							<button class="btn btn-primary btn-block btn-lg" id="ingSearch" type="submit">Search</button>
 						</div>
 					</div>
 				</form>
