--- a/Client/Views/Home/Search.cshtml
+++ b/Client/Views/Home/Search.cshtml
@@ -5,16 +5,16 @@
 	Layout = "_Layout";
 }
 
-<h2>Ingredient Search</h2>
+<br />
+<div class="row" >
+	<div class="col-md-9"><h2>Ingredient Search</h2></div>
+	<div id="edamam-badge" class="col-md-3" data-color="white"></div>
+</div>
+
 <hr>
 
 <h3> You searched for : @Model.Name</h3>
+<input type="hidden" value="@Model.Name" id="ingName"  />
 
-<br>
-@if (Model.IsVegan) {
-    <h4>The ingredient you searched for is Vegan.</h4>
-}
-else{
-    <h4>Sorry . Didn't Find the ingredient in our database!</h4>
-    <p> We are continously adding ingredients to our database</p>
-}
+<br />
+<div id="veganStatus"></div>
